--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   dotted_border: ^2.1.0
   cloud_firestore: ^5.6.9
   image_picker: ^1.1.2
+  icons_plus: ^5.0.0
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
